apps/shared/open-webui/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webui
  labels:
    name: webui
